Switch from nvidia-xrun to optimus-manager

--- a/README.org
+++ b/README.org
@@ -202,6 +202,7 @@ Here I've organized my thoughts from trying from trying out and choosing various
 | markup/notes              | doc->odt->markdown->org                                    |
 | VC                        | git                                                        |
 | fonts                     | inconsolata (LGC), fira-mono/code, uushi, siji             |
+| nvidia GPU management     | bumblebee->nvidia-xrun->optimus-manager                    |
 
 ** OS and Package Managers
 I started out using debian-based distros but quickly switched to Arch mainly for the minimal base installation, pacman, the aur, the wiki, and the rolling-release system. I love that essentially all the software I use is available in the aur (though I like that a good portion of my aur-only packages are in the official nix repos better). On the other hand, I hate having to recompile all my aur packages to ensure nothing breaks after a system update. This isn't always technically necessary if major packages (like gpg) haven't been updated, but it's risky not to. This makes me wish that more programs were in the official repos. As for aur helpers, I don't really have a strong preference. I'm mainly using trizen since pacaur development died; I really like that it asks to retry instead of quitting (e.g. if I leave it alone for a while after it's done/wrong password). Bauerbill and aura are also interesting. I like that pacaur can be used for both the aur and official repos at once, and I like that aura is run as root from the start like pacman, but I don't really use any of their advanced functionality.
