--- a/emacs/.emacs.d/awaken.org
+++ b/emacs/.emacs.d/awaken.org
@@ -1416,7 +1416,7 @@ I've switched away from putting this function in a hook because it can be jarrin
   :prefix-map 'noct:toggle-map
   "d" #'toggle-debug-on-error
   "q" #'toggle-debug-on-quit
-  "R" #'toggle-read-only
+  "R" #'read-only-mode
   "A" #'auto-fill-mode
   "t" #'toggle-truncate-lines)
 
