Emacs - Add blog and ox-hugo configuration
- Replace autoinsert with doom's file template code (uses yasnippet)
- Add template for blog posts
- Add framegroup for blog
- Add keybinding to create a new post
- Enable outline-minor-mode in conf-mode-hook (e.g. for config.toml)
- Bind C-e to insert a snippet (with completion)
- Enable ox-hugo auto export functionality

--- a/emacs/.emacs.d/awaken.org
+++ b/emacs/.emacs.d/awaken.org
@@ -109,6 +109,12 @@ Used throughout configuration.
     lisp-mode-hook)
   "List of hooks for all used lisp modes.")
 
+(defun noct-blog-dir-p (file)
+  "Return whether the current file is in my blog post directory."
+  (file-in-directory-p
+   file
+   (expand-file-name "content-org" (getenv "BLOG"))))
+
 (defun noct:kill-this-buffer ()
   "`kill-this-buffer' with no menu-bar checks.
 `kill-this-buffer' is supposed to be called from the menu bar.
@@ -1201,6 +1207,12 @@ Automatically uncompress (for editing) and recompress (when saving) compressed f
 (blink-cursor-mode -1)
 #+end_src
 
+** Executable
+#+begin_src emacs-lisp
+;; insert "/usr/bin/env interpreter" for shebangs
+(gsetq executable-prefix-env t)
+#+end_src
+
 ** Fill Column
 Also see [[#whitespace][Whitespace Mode]].
 #+begin_src emacs-lisp
@@ -1971,8 +1983,8 @@ This is a really basic ~counsel-buku~. =buku_run= has various issues for me. I m
 
 ** Manual Completion
 #+begin_src emacs-lisp
-(general-def 'insert
-  "C-n" #'complete-symbol)
+;; used for completion in vim
+(general-def 'insert "C-n" #'complete-symbol)
 #+end_src
 
 ** Prescient
@@ -2027,6 +2039,9 @@ This is a really basic ~counsel-buku~. =buku_run= has various issues for me. I m
       ;; dotfiles
       ("config"
        (find-file "~/.profile"))
+      ;; blog
+      ("blog"
+       (find-file (getenv "BLOG")))
       ;; writing
       ("wr"
        (find-file "~/ag-sys/else/scrawl/prose/pots/plot.org"))
@@ -2047,7 +2062,7 @@ This is a really basic ~counsel-buku~. =buku_run= has various issues for me. I m
     "s" (fg-switch "notes")
     "t" (fg-switch "prog")
     "d" (fg-switch "config")
-    ;; "h"
+    "h" (fg-switch "blog")
     "n" (fg-switch "wr")
     "e" (fg-switch "cons")
     "i" (fg-switch "mail")
@@ -2204,12 +2219,12 @@ Globbing is used to find a matching file."
        "T" #'projectile-find-test-file
        "m" #'noct:goto-makefile
        "p" (general-l
-            (eww-open-file
-             "~/ag-sys/library/programming/common_lisp/pcl_html/index.html"))
+             (eww-open-file
+              "~/ag-sys/library/programming/common_lisp/pcl_html/index.html"))
        "l"
        (general-l
-        (eww-open-file
-         "~/ag-sys/library/programming/common_lisp/minispec/html/index.html"))))
+         (eww-open-file
+          "~/ag-sys/library/programming/common_lisp/minispec/html/index.html"))))
     ("config"
      (general-comma
        "," (noct:f "~/dotfiles/README.org")
@@ -2217,6 +2232,13 @@ Globbing is used to find a matching file."
        ;; TODO
        ;; "e" (noct:f "~/dotfiles/editing.org")
        "b" (noct:f "~/dotfiles/browsing/README.org")))
+    ("blog"
+     (general-comma
+       ;; create post
+       "," (noct:f (expand-file-name
+                    (format "content-org/%s"
+                            (read-from-minibuffer "Post file name: "))
+                    (getenv "BLOG")))))
     ("wr"
      (general-comma
        "," (noct:f "~/ag-sys/else/scrawl/prose/standards+procedure.org")
@@ -2477,7 +2499,7 @@ Useful if constantly switching between only a few files in a project. I don't no
 ** Outline/Outshine
 #+begin_src emacs-lisp
 (use-package outline
-  :ghook ('prog-mode-hook #'outline-minor-mode)
+  :ghook ('(prog-mode-hook conf-mode-hook) #'outline-minor-mode)
   :diminish outline-minor-mode
   :config
   (general-def 'normal outline-minor-mode-map
@@ -2944,18 +2966,6 @@ Don't really use.
 (general-def 'visual "ta" #'align)
 #+end_src
 
-** TODO Auto Insert
-TODO Tries to insert things when running straight commands (need to find a good way to identify when user deliberately created a file).
-#+begin_src emacs-lisp
-(use-package autoinsert
-  :disabled t
-  :init (auto-insert-mode)
-  :config
-  (gsetq auto-insert-query nil
-         ;; insert "/usr/bin/env interpreter" for shebangs
-         executable-prefix-env t))
-#+end_src
-
 ** Commenting
 Automatic integration with org source blocks is nice. Evilnc jumps to the beginning of the block currently. Evil-commentary moves the point to the next line and scrolls the window, which is even worse. With polymode, any commenting command should work fine in a source block.
 
@@ -2978,6 +2988,181 @@ Evilnc also has comment text objects, but they were fairly broken last time I tr
 ;;   (let* ((imenu-create-index-function #'evilnc-imenu-create-index-function))
 ;;     (unless (featurep 'counsel) (require 'counsel))
 ;;     (counsel-imenu)))
+#+end_src
+
+** File Templates
+*** Doom Helpers
+Would be nice if this was a package. Nice over autoinsert.
+#+begin_src emacs-lisp
+;; https://github.com/hlissner/doom-emacs/blob/b0978a4526cfd78bb18e5279909c19bee97e9878/modules/editor/file-templates/autoload.el
+(defun doom-+file-templates--set (pred plist)
+  (if (null (car-safe plist))
+      (setq doom-+file-templates-alist
+            (delq (assoc pred doom-+file-templates-alist)
+                  doom-+file-templates-alist))
+    (push `(,pred ,@plist) doom-+file-templates-alist)))
+
+(defun doom-set-file-template! (pred &rest plist)
+  "Register a file template.
+PRED can either be a regexp string or a major mode symbol. PLIST may contain
+these properties:
+  :when FUNCTION
+    Provides a secondary predicate. This function takes no arguments and is
+    executed from within the target buffer. If it returns nil, this rule will be
+    skipped over.
+  :trigger STRING|FUNCTION
+    If a string, this is the yasnippet trigger keyword used to trigger the
+      target snippet.
+    If a function, this function will be run in the context of the buffer to
+      insert a file template into. It is given no arguments and must insert text
+      into the current buffer manually.
+    If omitted, `doom-+file-templates-default-trigger' is used.
+  :mode SYMBOL
+    What mode to get the yasnippet snippet from. If omitted, either PRED (if
+    it's a major-mode symbol) or the mode of the buffer is used.
+  :project BOOL
+    If non-nil, ignore this template if this buffer isn't in a project.
+  :ignore BOOL
+    If non-nil, don't expand any template for this file and don't test any other
+    file template rule against this buffer.
+\(fn PRED &key WHEN TRIGGER MODE PROJECT IGNORE)"
+  (declare (indent defun))
+  (doom-+file-templates--set pred plist))
+
+(defun doom-set-file-templates! (&rest templates)
+  "Like `doom-set-file-template!', but can register multiple file templates at once.
+\(fn &rest (PRED &key WHEN TRIGGER MODE PROJECT IGNORE))"
+  (dolist (template templates)
+    (doom-+file-templates--set (car template) (cdr template))))
+
+;;
+;;; Library
+
+(cl-defun doom-+file-templates--expand (pred &key project mode trigger ignore _when)
+  "Auto insert a yasnippet snippet into current file and enter insert mode (if
+evil is loaded and enabled)."
+  (when (and pred (not ignore))
+    (when (if project (projectile-project-p) t)
+      (unless mode
+        (setq mode (if (symbolp pred) pred major-mode)))
+      (unless mode
+        (user-error "Couldn't determine mode for %s file template" pred))
+      (unless trigger
+        (setq trigger doom-+file-templates-default-trigger))
+      (if (functionp trigger)
+          (funcall trigger)
+        (require 'yasnippet)
+        (unless yas-minor-mode
+          (yas-minor-mode-on))
+        (when (and yas-minor-mode
+                   (when-let
+                       (template (cl-find trigger (yas--all-templates (yas--get-snippet-tables mode))
+                                          :key #'yas--template-key :test #'equal))
+                     (yas-expand-snippet (yas--template-content template)))
+                   (and (featurep 'evil) evil-local-mode)
+                   (and yas--active-field-overlay
+                        (overlay-buffer yas--active-field-overlay)
+                        (overlay-get yas--active-field-overlay 'yas--field)))
+          (evil-initialize-state 'insert))))))
+
+(defun doom-+file-templates-get-short-path ()
+  "Fetches a short file path for the header in Doom module templates."
+  (let ((path (file-truename (or buffer-file-name default-directory))))
+    (save-match-data
+      (cond ((string-match "/modules/\\(.+\\)$" path)
+             (match-string 1 path))
+            ((file-in-directory-p path doom-emacs-dir)
+             (file-relative-name path doom-emacs-dir))
+            ((abbreviate-file-name path))))))
+
+;;
+;;; Commands
+
+(defun doom-+file-templates/insert-license ()
+  "Insert a license file template into the current file."
+  (interactive)
+  (require 'yasnippet)
+  (let ((templates
+         (let (yas-choose-tables-first ; avoid prompts
+               yas-choose-keys-first)
+           (cl-loop for tpl in (yas--all-templates (yas--get-snippet-tables 'text-mode))
+                    for uuid = (yas--template-uuid tpl)
+                    if (string-prefix-p "__license-" uuid)
+                    collect (cons (string-remove-prefix "__license-" uuid) tpl)))))
+    (when-let (uuid (yas-choose-value (mapcar #'car templates)))
+      (yas-expand-snippet (cdr (assoc uuid templates))))))
+
+(defun doom+file-templates/debug ()
+  "Tests the current buffer and outputs the file template rule most appropriate
+for it. This is used for testing."
+  (interactive)
+  (message "Found %s" (cl-find-if #'+file-template-p +file-templates-alist)))
+
+
+;; https://github.com/hlissner/doom-emacs/blob/b0978a4526cfd78bb18e5279909c19bee97e9878/modules/editor/file-templates/config.el
+(defvar doom-+file-templates-dir
+  (expand-file-name "etc/yasnippet/templates/" user-emacs-directory)
+  "The path to a directory of yasnippet folders to use for file templates.")
+
+(defvar doom-+file-templates-default-trigger "__"
+  "The default yasnippet trigger key (a string) for file template rules that
+don't have a :trigger property in `doom-+file-templates-alist'.")
+
+(defvar doom-+file-templates-alist nil
+  "An alist of file template rules. The CAR of each rule is either a major mode
+symbol or regexp string. The CDR is a plist. See `doom-set-file-template!' for more
+information.")
+
+;;
+;;; Library
+
+(defun doom-+file-template-p (rule)
+  "Return t if RULE applies to the current buffer."
+  (let ((pred (car rule))
+        (plist (cdr rule)))
+    (and (or (and (symbolp pred)
+                  (eq major-mode pred))
+             (and (stringp pred)
+                  (stringp buffer-file-name)
+                  (string-match-p pred buffer-file-name)
+                  (or (not (plist-member plist :when))
+                      (funcall (plist-get plist :when)
+                               buffer-file-name))))
+         rule)))
+
+(defun doom-+file-templates-check-h ()
+  "Check if the current buffer is a candidate for file template expansion. It
+must be non-read-only, empty, and there must be a rule in
+`doom-+file-templates-alist' that applies to it."
+  (and buffer-file-name
+       (not buffer-read-only)
+       (bobp) (eobp)
+       (not (member (substring (buffer-name) 0 1) '("*" " ")))
+       (not (file-exists-p buffer-file-name))
+       ;; Prevent file-templates from breaking org-capture when target file
+       ;; doesn't exist and has a file template.
+       (or (not (fboundp 'org-capture-get))
+           (not (org-capture-get :new-buffer)))
+       (when-let (rule (cl-find-if #'doom-+file-template-p doom-+file-templates-alist))
+         (apply #'doom-+file-templates--expand rule))))
+
+
+;;
+;;; Bootstrap
+
+(general-with 'yasnippet
+  (general-pushnew doom-+file-templates-dir yas-snippet-dirs)
+  ;; Ensure file templates in `+file-templates-dir' are visible
+  (yas-reload-all))
+
+;;
+(general-add-hook 'find-file-hook #'doom-+file-templates-check-h)
+#+end_src
+
+*** Templates
+#+begin_src emacs-lisp
+(gsetq doom-+file-templates-alist
+       '((org-mode :when noct-blog-dir-p :trigger "__post")))
 #+end_src
 
 ** Smart Parens
@@ -3038,6 +3223,8 @@ Evilnc also has comment text objects, but they were fairly broken last time I tr
   :diminish yas-minor-mode
   :defer 3
   :general
+  ;; no mnemonic but next to C-n and default keybinding already on extend layer
+  (general-def 'insert "C-e" #'yas-insert-snippet)
   (general-s "y" #'yas-new-snippet)
   (general-def help-map
     ;; unbound by default
@@ -4301,6 +4488,22 @@ pressing \".\" before selecting the word. Otherwise, correct it."
                         counsel-semantic-or-imenu
                         worf-goto)
                       :around #'polymode-with-current-base-buffer))
+#+end_src
+
+** Org Mode
+*** External/Contrib
+**** Ox Hugo
+#+begin_src emacs-lisp
+(use-package ox-hugo
+  :init
+  (general-add-advice 'after-find-file
+                      :before
+                      (lambda (&rest _)
+                        (when (noct-blog-dir-p buffer-file-name)
+                          (require 'ox-hugo-auto-export))))
+  (general-with 'ox
+    (require 'ox-hugo))
+  :demand t)
 #+end_src
 
 ** Pentadactyl
@@ -5770,7 +5973,7 @@ TODO: File opening widh dired (see dired-rifle, dired-open, runner, and unify-op
   (general-def 'normal dired-mode-map
     :prefix "'"
     "b" (noct:find-alternate-file "~/dotfiles/scripts/bin/")
-    "B" (noct:find-alternate-file "~/src/noctuid.github.io/")
+    "B" (noct:find-alternate-file "~/src/blog/pir-hana/")
     "c" (noct:find-alternate-file "~/src/")
     "d" (noct:find-alternate-file "~/database/")
     "e" (noct:find-alternate-file "~/.emacs.d/")
